# cyberaancha

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  MEMO.md  Makefile  PREP.md  PROG.md  README.md  SPEC.md  TODO.md  aancha.toml.example  cyberaancha.toml.example
collector/: collector.js
deploy/: Dockerfile  README.md  docker-compose.yml  nginx-aancha.conf  nginx-cyberaancha.conf
prompts/: integrate.md
research/: inv_AnchaBaranovaProf_streams.txt  inv_AnchaBaranovaProf_videos.txt  inv_vanyserezhkin_streams.txt  inv_vanyserezhkin_videos.txt  p0-findings.md  youtube-structure-2026-07.md
schemas/: discover.json  harvest_captions.json  harvest_chat.json  harvest_comments.json  harvest_meta.json  integrate.json  transcribe.json
scripts/: transcribe_pending.sh
src/: answer.rs  auth.rs  backup.rs  config.rs  main.rs  mcp.rs  raw.rs
src/db/: mod.rs
src/db/migrations/: 001_init.sql  002_queue.sql  003_comments_chat.sql  004_kb.sql  005_integrate.sql  006_task_payload.sql
src/http/: api.rs  auth_mw.rs  mod.rs
src/index/: mod.rs
src/kb/: mod.rs
src/queue/: mod.rs  prep.rs
web/: MEMO.md  SPEC.md  TODO.md  admin.html
