[package]
name = "aancha-server"
version = "0.1.0"
edition = "2024"
description = "Knowledge base server for Prof. Ancha Baranova's channel — storage, task queue, fulltext, panel, MCP"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.53", features = ["macros", "rt-multi-thread", "signal", "net"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
