[package]
name = "aancha-server"
version = "0.1.0"
edition = "2024"
description = "Knowledge base server for Prof. Ancha Baranova's channel — storage, task queue, fulltext, panel, MCP"
license = "MIT"

[dependencies]
anyhow = "1"
argon2 = "0.5" # 0.6 is still RC — not for production auth (PROG.md)
axum = "0.8"
base64 = "0.22"
blake3 = "1.8"
clap = { version = "4.6", features = ["derive"] }
flate2 = "1.1"
jiff = "0.2"
rand = "0.10"
rpassword = "7"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1.53", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
